# python-seabreeze

./: .appveyor.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  appveyor.yml  install_libseabreeze.sh  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: run_test_build_deploy.yaml  run_tests.yaml  wheels.yml
appveyor/: install.ps1
ci/: build_manylinux_wheels.sh  build_osx_wheels.sh  build_windows_wheels.cmd
dev/: pretty_print_obp_pcapng.py
docs/: BACKENDS.md  DOCUMENTATION.md  LINUX_INSTALL.md  MACOSX_INSTALL.md  WINDOWS_INSTALL.md  environment.yml
docs/source/: api.rst  backend_api.rst  conf.py  contributing.rst  index.rst  install.rst  install_seabreeze.rst  quickstart.rst  tldr.rst  troubleshoot.rst
docs/source/_extensions/: repo_file.py
misc/: 10-oceanoptics.rules  install_libseabreeze.sh  install_udev_rules.sh
os_support/: 10-oceanoptics.rules  readme.md
scripts/: seabreeze-compare
seabreeze/: __init__.py  backends.py  cseabreeze.pxd  sbcapi.pyx  sbpyapi.py  seabreezecapi.pyx  seabreezepyapi.py  spectrometers.py
seabreeze/cseabreeze/: __init__.py  cseabreeze.pxd  wrapper.c  wrapper.pyx
seabreeze/pyseabreeze/: TODO.md  __init__.py  wrapper.py
seabreeze/pyseabreeze/interfaces/: __init__.py  common.py  communication.py  defines.py  eeprom.py  messages.py  nonlinearity.py  serialnumber.py  spectrometer.py  thermoelectric.py  wavelength.py
src/libseabreeze/include/api/: DeviceFactory.h  DllDecl.h  SeaBreezeWrapper.h  USBEndpointTypes.h
src/libseabreeze/include/api/seabreezeapi/: AcquisitionDelayFeatureAdapter.h  ContinuousStrobeFeatureAdapter.h  DHCPServerFeatureAdapter.h  DataBufferFeatureAdapter.h  DeviceAdapter.h  EEPROMFeatureAdapter.h  EthernetConfigurationFeatureAdapter.h  FastBufferFeatureAdapter.h  FeatureAdapterInterface.h  FeatureAdapterTemplate.h  FeatureFamilies.h  I2CMasterFeatureAdapter.h  IPv4FeatureAdapter.h  (+24 more)
src/libseabreeze/include/common/: ByteVector.h  Data.h  DoubleVector.h  FloatVector.h  Log.h  SeaBreeze.h  U32Vector.h  UShortVector.h  UnitDescriptor.h  globals.h
src/libseabreeze/src/api/: DeviceFactory.cpp  SeaBreezeWrapper.cpp
src/libseabreeze/src/common/: ByteVector.cpp  Data.cpp  DoubleVector.cpp  FloatVector.cpp  Log.cpp  U32Vector.cpp  UShortVector.cpp  UnitDescriptor.cpp
src/seabreeze/: __init__.py  _cli.py  _exc.py  backends.py  compat.py  os_setup.py  spectrometers.py  types.py
src/seabreeze/cseabreeze/: __init__.py  c_seabreeze.pxd  c_seabreeze_wrapper.pyx  cseabreeze.pxd
src/seabreeze/pyseabreeze/: TODO.md  __init__.py  api.py  communication.py  config.py  defines.py  devices.py  exceptions.py  protocol.py  transport.py  types.py
src/seabreeze/pyseabreeze/features/: __init__.py  _base.py  _interface.py  acquisitiondelay.py  continuousstrobe.py  databuffer.py  dhcpserver.py  eeprom.py  ethernetconfiguration.py  fastbuffer.py  fpga.py  gpio.py  i2cmaster.py  introspection.py  ipv4.py  irradcal.py  lightsource.py  multicast.py  networkconfiguration.py  nonlinearity.py  opticalbench.py  pixelbinning.py  rawusb.py  revision.py  shutter.py  spectrometer.py  spectrumprocessing.py  straylightcoefficients.py  strobelamp.py  temperature.py  thermoelectric.py  wavelength.py  wificonfiguration.py
src/seabreeze/pyseabreeze/interfaces/: __init__.py  nonlinearity.py  spectrumprocessing.py  thermoelectric.py
system/: 10-oceanoptics.rules  install_libseabreeze.sh
test/: seabreeze  test.py  testcapi.py
tests/: conftest.py  test_backends.py  test_protocol.py  test_spectrometers.py
travis/: build_manylinux_wheels.sh  build_osx_wheels.sh  build_wheel.sh  build_windows_wheels.sh
(+889 files in other folders)
