[build-system]
requires = [
    "setuptools>=18.0",
    "cython>=0.18",
    "wheel>=0.31.0",
    "setuptools_scm",
    "pkgconfig"  # this should be Linux only, but PEP508 is not supported yet in pyproject.toml
    ]

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | venv.*
    | build
    | dist
    | ci
  )/
)
'''

[tool.isort]
profile = "black"
py_version = "37"
force_single_line = true

[tool.cibuildwheel.linux]
before-build = "yum install -y libusb-devel"

[tool.mypy]
python_version = "3.7"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = "./src/**/*.py"
exclude = """
(?x)(
   ^build|
   ^docs|
   ^tests|
   setup.py
)
"""

[[tool.mypy.overrides]]
module = "seabreeze.cseabreeze._wrapper"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "usb.*"
ignore_missing_imports = true
